# JamesDSP4Windows_Decluttered

./: .gitignore  migration_context.md
AxiomConsoleHarness/: CMakeLists.txt  CONTROLLER-WRAPUP.md  Directory.Build.props  PACKAGE-README.txt  README.md  SIGNING.md  SOAK-TESTING.md  Start 1-Hour Validation Test.bat  Start 8-Hour Qualification Test.bat  build_axiom_console.bat  build_axiom_controller.bat  build_installer.bat  build_installer.ps1  package-default.ini  publish_axiom_app.bat  publish_axiom_app.ps1  run_axiom_console.bat  run_axiom_controller.bat  sign_release.ps1
AxiomConsoleHarness/AxiomJamesDSPController/: AxiomJamesDSPController.csproj  Program.cs
AxiomConsoleHarness/installer/: AxiomJamesDSPController.iss
AxiomConsoleHarness/runtime/: axiom-test-lowcut.eel  axiom-test-pulse-gate.eel
AxiomConsoleHarness/tests/: analyze_soak_health.ps1  manual_recovery_session.bat  manual_recovery_session.ps1  run_overnight_gate.bat  run_overnight_gate.ps1  run_release_preflight.bat  run_release_preflight.ps1  run_smoke_tests.bat  run_smoke_tests.ps1  run_soak_test.bat  run_soak_test.ps1
JamesDSP-Windows/: CMakeLists-console.txt  CMakeLists.txt  analyze_eel.py  build_fix.bat  build_release.bat  build_temp.bat  config.ini  debug_log.txt  debug_run.bat  eel_report.txt  resources.qrc  run_jdsp.bat
JamesDSP-Windows/assets/dexopt/: baseline.prof  baseline.profm
JamesDSP-Windows/build-final/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  interp_debug.txt
JamesDSP-Windows/build-final/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
JamesDSP-Windows/build-final/JamesDSP-GUI_autogen/: deps  mocs_compilation.cpp
JamesDSP-Windows/build-final/JamesDSP-GUI_autogen/DMHXEJ42XS/: moc_AudioService.cpp  moc_AudioService.cpp.d  moc_DspController.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_curve_widgets.cpp  moc_curve_widgets.cpp.d  moc_widgets.cpp  (+1 more)
JamesDSP-Windows/build-fix/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  debug_log.txt
JamesDSP-Windows/build-fix/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
JamesDSP-Windows/build-fix/JamesDSP-GUI_autogen/: deps
JamesDSP-Windows/build-fresh/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cmake_output.txt  debug_log.txt
JamesDSP-Windows/build-fresh/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
JamesDSP-Windows/build-fresh/JamesDSP-GUI_autogen/: deps
JamesDSP-Windows/build-gui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  JamesDSP-GUI.sln  JamesDSP-GUI.vcxproj  JamesDSP-GUI.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
JamesDSP-Windows/build-gui/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
JamesDSP-Windows/build-gui/JamesDSP-GUI_autogen/: mocs_compilation_Debug.cpp
JamesDSP-Windows/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
JamesDSP-Windows/build-ninja/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
JamesDSP-Windows/build-ninja/JamesDSP-GUI_autogen/: deps  mocs_compilation.cpp
JamesDSP-Windows/gui/: AudioService.cpp  AudioService.h  DeviceEnumerator.h  DspController.cpp  DspController.h  MainWindow.cpp  MainWindow.h  curve_widgets.h  libs_impl.c  main.cpp  widgets.h
JamesDSP-Windows/src/: DspConfig.cpp  DspConfig.h  main.cpp
JamesDSP-Windows/src/compat/: unistd.h
(+59 files in other folders)
